# UBTR-D

./: CMakeLists.txt  README  tracker_vis.mac  ubt_vis.mac
exec/: main_g4.cpp
include/: MaterialManager.h  TrackerDetectorConstruction.hh  TrackerEventAction.hh  TrackerPlaneBuilder.h  TrackerPrimaryGeneratorAction.hh  TrackerRunAction.hh  TrackerSD.hh  UBTDetectorConstruction.hh  UBTEventAction.hh  UBTEventStore.hh  UBTHit.hh  UBTPlaneBuilder.h  UBTPrimaryGeneratorAction.hh  UBTRunAction.hh  UBTSD.hh
src/: INTEGRATION_NOTES.cpp  MaterialManager.cpp  MaterialManager_TrackerAdditions.cpp  TrackerDetectorConstruction.cc  TrackerEventAction.cc  TrackerHit.cc  TrackerPlaneBuilder.cpp  TrackerPrimaryGeneratorAction.cc  TrackerRunAction.cc  TrackerSD.cc  UBTDetectorConstruction.cc  UBTEventAction.cc  UBTHit.cc  UBTPlaneBuilder.cpp  UBTPrimaryGeneratorAction.cc  UBTRunAction.cc  UBTSD.cc
